-prepared Swf model for external paths -fixed header categories placement for mobile -fixed footer logo and links placement for mobile -fixed overflowing of mobile article links -fixed hover popping up for mobile when article is in masked mode

--- a/public/stylesheets/articles.less
+++ b/public/stylesheets/articles.less
@@ -108,6 +108,7 @@
 				background: white url(../images/mobile_link.png) top left no-repeat;
 				z-index: 2000;
 				cursor: pointer;
+				overflow: hidden;
 				.text {
 					height: 28px;
 					position: absolute;
