--- a/public/stylesheets/header.less
+++ b/public/stylesheets/header.less
@@ -36,8 +36,15 @@
 				float: right;
 				font-size: 22px;
 				font-family: 'alfi bold';
-				height: 30px;
+				min-height: 30px;
 				line-height: 30px;
+				> ul {
+					margin: 0 auto;
+					li {
+						height: 30px;
+						line-height: 30px;
+					}
+				}
 			}
 		}
 		.toggleForm {
