--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -90,71 +90,8 @@ h1,h2,h3,h4,h5,h6 {
 	}
 }
 
-
-
-.footer, .push {
-	min-height: @push;
-}
-
-#footer {
-	background: #e2e4e5 url(../images/footer_bg.png) repeat-x;
-}
-
-#footer {
-	position: relative;
-	min-height: @push;
-	.footer {
-		max-width: 940px;
-		margin: 0 auto;
-		.links {
-			min-height: 48px;
-			ul {
-				background: transparent url(../images/brand.png) no-repeat left center;
-				clear: both;
-				margin: 10px auto 0;
-				padding: 0;
-				display: block;
-				min-height: 48px;
-				max-width: 940px;
-				text-align: center;
-				direction: rtl;
-				line-height: 48px;
-				li {
-					display: inline-block;
-					margin: 0 0 0 10px;
-					height: 19px;
-					padding: 3px 20px 3px 0;
-					line-height: 19px;
-					direction: rtl;
-					background: transparent url(../images/footer_bullet.png) no-repeat center right;
-					&:last-child {
-						a {
-							border: none;
-						}
-					}
-					a {
-						color: black;
-						text-decoration: none;
-						display: block;
-						height: 19px;
-						line-height: 19px;
-						border-left: black solid 1px;
-						padding: 0 0 0 10px;
-						cursor: pointer;
-						&:hover {
-							color: #ccc;
-						}
-						&:visited {
-							color: black;
-						}
-					}
-				}
-			}
-		}
-	}
-}
-
 @import "header.less";
+@import "footer.less";
 @import "form.less";
 @import "articles.less";
 @import "content.less";
